--- a/frontend/src/components/HamburgerMenu.astro
+++ b/frontend/src/components/HamburgerMenu.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<button class="md:hidden focus:outline-none space-y-2 hamburger">
+<button id="hamburger" class="md:hidden focus:outline-none space-y-2">
   <span class="block w-8 h-0.5 bg-riso-red"></span>
   <span class="block w-8 h-0.5 bg-riso-red"></span>
   <span class="block w-8 h-0.5 bg-riso-red"></span>
