--- a/frontend/src/layouts/MainLayout.astro
+++ b/frontend/src/layouts/MainLayout.astro
@@ -27,8 +27,8 @@ const { title } = Astro.props;
       import "../lib/photoSwipe";
       import "photoswipe/style.css";
 
-      document.querySelector(".hamburger").addEventListener("click", () => {
-        document.querySelector(".nav-links").classList.toggle("expanded");
+      document.querySelector("#hamburger").addEventListener("click", () => {
+        document.querySelector("#nav-menu").classList.toggle("hidden");
       });
     </script>
   </body>
