--- a/frontend/src/components/Header.astro
+++ b/frontend/src/components/Header.astro
@@ -11,7 +11,7 @@ const settings = await getSiteSettings();
     <NavBar />
     <div class="flex justify-between gap-5 md:block">
       <h1
-        class="text-riso-red text-lg font-semibold uppercase md:font-bold md:text-3xl md:text-center"
+        class="text-riso-red text-lg font-semibold uppercase md:mt-2 md:font-bold md:text-3xl md:text-center"
       >
         {settings.title}
       </h1>
