--- a/frontend/src/components/Header.astro
+++ b/frontend/src/components/Header.astro
@@ -6,7 +6,7 @@ import NavBar from "./NavBar.astro";
 const settings = await getSiteSettings();
 ---
 
-<header class="container mx-auto pt-5 bg-white sticky top-0">
+<header class="container mx-auto pt-5">
   <div class="flex flex-col-reverse justify-between gap-4 md:block">
     <NavBar />
     <div class="flex justify-between gap-5 md:block">
