--- a/frontend/src/components/blog/FeatureBlock.astro
+++ b/frontend/src/components/blog/FeatureBlock.astro
@@ -2,6 +2,13 @@
 const { features } = Astro.props;
 ---
 
-<ul>
-  {features.map((feat) => <li>{feat.title}</li>)}
+<ul class="space-y-1">
+  {
+    features.map((feat) => (
+      <li>
+        <h2 class="text-lg font-semibold uppercase inline">{feat.title}:</h2>
+        <p class="inline">{feat.text}</p>
+      </li>
+    ))
+  }
 </ul>
