--- a/frontend/src/pages/blog/posts/[slug].astro
+++ b/frontend/src/pages/blog/posts/[slug].astro
@@ -26,19 +26,26 @@ const date = post.date.slice(0, 10);
 ---
 
 <MainLayout title={post.title}>
-  <article class:list={["gallery", color.text]}>
+  <article class:list={["gallery grid gap-2 md:grid-cols-2", color.text]}>
     <span class="text-xs">{date}</span>
-    <div>
-      <h1 class:list={["text-2xl font-semibold uppercase", color.title]}>
-        {post.title}
-      </h1>
-      <p>
-        {post.description}
-      </p>
-      {post.illustration && <BlogPostImage illustration={post.illustration} />}
-      {features && <FeatureBlock features={post.features} />}
+
+    <h1
+      class:list={[
+        "text-2xl font-semibold uppercase md:col-span-2",
+        color.title,
+      ]}
+    >
+      {post.title}
+    </h1>
+    <p class="md:col-span-2">
+      {post.description}
+    </p>
+    {post.illustration && <BlogPostImage illustration={post.illustration} />}
+    {features && <FeatureBlock features={post.features} />}
+    <div class="md:col-span-2">
       {post.body && <Fragment set:html={sanityPortableText(post.body)} />}
     </div>
+
     <footer>
       <BlogPostTags tags={post.tags} />
     </footer>
