add color to footer, adjust spacing

--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -2,7 +2,9 @@
 const year = new Date().getFullYear();
 ---
 
-<footer class="text-center text-riso-green text-xs md:text-sm mt-auto">
-  <p>Copyright &copy; {year} Arlin Ortiz.&nbsp;</p>
-  <p>All Rights Reserved.&nbsp;</p>
+<footer class="text-center text-riso-blue py-3 text-xs md:text-sm mt-auto">
+  <p>
+    Copyright &copy; {year}
+    <span class="text-riso-red">Arlin Ortiz</span>. All Rights Reserved.
+  </p>
 </footer>
