--- a/frontend/src/components/blog/BlogPostCard.astro
+++ b/frontend/src/components/blog/BlogPostCard.astro
@@ -10,9 +10,11 @@ const postUrl = `/blog/posts/${post.slug.current}/`;
 ---
 
 <article>
-  <a class="relative" href={postUrl}>
-    <span class="absolute -left-6 md:-left-8 text-riso-red">{">>"}</span>
-    <span class:list={["text-xs", color.text]}>{date}</span>
+  <a class="relative hover:opacity-70" href={postUrl}>
+    <div>
+      <span class="absolute -left-6 md:-left-8 text-riso-red">{">>"}</span>
+      <span class:list={["text-xs", color.text]}>{date}</span>
+    </div>
     {
       post.illustration && (
         <BlogCardImage illustration={post.illustration} borderColor={color} />
