--- a/frontend/src/pages/blog/[tag]/[...page].astro
+++ b/frontend/src/pages/blog/[tag]/[...page].astro
@@ -23,9 +23,10 @@ export async function getStaticPaths({ paginate }) {
 }
 const { page } = Astro.props;
 const params = Astro.params;
+const title = params.tag;
 ---
 
-<MainLayout>
+<MainLayout title={title}>
   <h2>{params.tag}</h2>
   <BlogFeed posts={page.data} />
   <PaginationNav {page} />
