basic blog page formatting

--- a/frontend/src/components/blog/BlogPostImage.astro
+++ b/frontend/src/components/blog/BlogPostImage.astro
@@ -6,7 +6,7 @@ const image = urlForImage(illustration.image).width(640).fit("max").url();
 ---
 
 <a
-  class="ps-image"
+  class="ps-image lg:float-right lg:max-w-xs lg:mr-4"
   href={image}
   data-pswp-src={image}
   data-pswp-width={640}
