--- a/frontend/src/pages/blog/posts/[slug].astro
+++ b/frontend/src/pages/blog/posts/[slug].astro
@@ -1,10 +1,12 @@
 ---
+import { portableTextToHtml } from "astro-sanity";
 import BlogPostImage from "../../../components/blog/BlogPostImage.astro";
 import BlogPostTags from "../../../components/blog/BlogPostTags.astro";
 import FeatureBlock from "../../../components/blog/FeatureBlock.astro";
 import MainLayout from "../../../layouts/MainLayout.astro";
-import { sanityPortableText } from "../../../lib/portableText";
+
 import { getAllPosts } from "../../../lib/sanity";
+
 import risoColorClasses from "../../../utility/risoColorClasses";
 
 export async function getStaticPaths() {
@@ -23,27 +25,37 @@ const color = risoColorClasses[post.color];
 
 const features = post.features;
 const date = post.date.slice(0, 10);
+
+const customComponent = {
+  block: {
+    h2: (value) =>
+      `<h2 class="test text-lg font-semibold uppercase">${value.children}</h2>`,
+  },
+};
 ---
 
 <MainLayout title={post.title}>
-  <article class:list={["gallery grid gap-2 md:grid-cols-2", color.text]}>
+  <article class:list={["gallery", color.text]}>
     <span class="text-xs">{date}</span>
 
-    <h1
-      class:list={[
-        "text-2xl font-semibold uppercase md:col-span-2",
-        color.title,
-      ]}
-    >
+    <h1 class:list={["text-2xl font-semibold uppercase ", color.title]}>
       {post.title}
     </h1>
-    <p class="md:col-span-2">
+    <p class="">
       {post.description}
     </p>
-    {post.illustration && <BlogPostImage illustration={post.illustration} />}
-    {features && <FeatureBlock features={post.features} />}
-    <div class="md:col-span-2">
-      {post.body && <Fragment set:html={sanityPortableText(post.body)} />}
+    <div class="mt-3">
+      {post.illustration && <BlogPostImage illustration={post.illustration} />}
+      {features && <FeatureBlock features={post.features} />}
+
+      {
+        post.body && (
+          <div
+            class="test"
+            set:html={portableTextToHtml(post.body, customComponent)}
+          />
+        )
+      }
     </div>
 
     <footer>
@@ -51,3 +63,9 @@ const date = post.date.slice(0, 10);
     </footer>
   </article>
 </MainLayout>
+
+<style>
+  p {
+    @apply text-riso-red;
+  }
+</style>
