add lorem ipsum

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -3,4 +3,8 @@ import MainLayout from "../layouts/MainLayout.astro";
 const title = "Through The Dungeon Home";
 ---
 
-<MainLayout title={title} />
+<MainLayout title={title}>
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere et placeat
+  temporibus. Harum illum facilis voluptatibus atque! Consequatur vel unde sit
+  repudiandae optio ut autem quam, quia velit nisi error?
+</MainLayout>
