increase button size for mobile

--- a/frontend/src/components/TagCloud.astro
+++ b/frontend/src/components/TagCloud.astro
@@ -6,7 +6,7 @@ const tags = await getAllTags();
 ---
 
 <div>
-  <button id="filter-tags" class="text-riso-red"
+  <button id="filter-tags" class="text-riso-red text-xl md:text-base"
     ><span class="underline">Filter By Tag</span>
     <span class="hidden tag-cloud-hide">↓</span>
     <span class="tag-cloud-hide">→</span>
