refactor blogfeed component

--- a/frontend/src/pages/blog/[...page].astro
+++ b/frontend/src/pages/blog/[...page].astro
@@ -22,7 +22,5 @@ const title = "Blog";
 ---
 
 <MainLayout title={title}>
-  <TagCloud />
-  <BlogFeed posts={page.data} />
-  <PaginationNav {page} />
+  <BlogFeed page={page} />
 </MainLayout>
