--- a/frontend/src/pages/blog/[tag]/[...page].astro
+++ b/frontend/src/pages/blog/[tag]/[...page].astro
@@ -28,7 +28,5 @@ const title = params.tag;
 ---
 
 <MainLayout title={title}>
-  <TagCloud />
-  <BlogFeed posts={page.data} />
-  <PaginationNav {page} />
+  <BlogFeed page={page} />
 </MainLayout>
