add link to header title

--- a/frontend/src/components/Header.astro
+++ b/frontend/src/components/Header.astro
@@ -13,7 +13,7 @@ const settings = await getSiteSettings();
       <h1
         class="text-riso-red text-lg font-semibold uppercase md:mt-2 md:font-bold md:text-3xl md:text-center"
       >
-        {settings.title}
+        <a href="/">{settings.title}</a>
       </h1>
       <HamburgerMenu />
     </div>
