--- a/frontend/src/components/TagLink.astro
+++ b/frontend/src/components/TagLink.astro
@@ -5,7 +5,7 @@ const { color, slug, title } = Astro.props;
 
 <a
   class:list={["block text-white px-3 py-1", risoColorClasses[color].bg]}
-  href={`/blog/${slug}`}
+  href={`${slug}`}
 >
   {title}
 </a>
