--- a/frontend/src/components/blog/BlogFeed.astro
+++ b/frontend/src/components/blog/BlogFeed.astro
@@ -8,7 +8,7 @@ const posts = page.data;
 ---
 
 <div class="max-w-3xl">
-  <TagCloud />
+  <TagCloud path="/blog/" />
   <ul class="flex flex-col gap-8 mt-8">
     {
       posts.map((post) => (
