--- a/frontend/src/components/TagLink.astro
+++ b/frontend/src/components/TagLink.astro
@@ -1,11 +1,11 @@
 ---
 import risoColorClasses from "../utility/risoColorClasses";
-const { color, slug, title } = Astro.props;
+const { color, slug, title, path } = Astro.props;
 ---
 
 <a
   class:list={["block text-white px-3 py-1", risoColorClasses[color].bg]}
-  href={`${slug}`}
+  href={path + slug}
 >
   {title}
 </a>
