--- a/frontend/src/components/blog/BlogPostCard.astro
+++ b/frontend/src/components/blog/BlogPostCard.astro
@@ -1,7 +1,7 @@
 ---
 import risoColorClasses from "../../utility/risoColorClasses.js";
+import Tags from "../Tags.astro";
 import BlogCardImage from "./BlogCardImage.astro";
-import BlogPostTags from "./BlogPostTags.astro";
 
 const { post } = Astro.props;
 const date = post.date.slice(0, 10);
@@ -9,7 +9,7 @@ const color = risoColorClasses[post.color];
 const postUrl = `/blog/posts/${post.slug.current}/`;
 ---
 
-<article>
+<article class="space-y-2">
   <a class="relative hover:opacity-70" href={postUrl}>
     <div>
       <span class="absolute -left-6 md:-left-8 text-riso-red">{">>"}</span>
@@ -20,11 +20,10 @@ const postUrl = `/blog/posts/${post.slug.current}/`;
         <BlogCardImage illustration={post.illustration} borderColor={color} />
       )
     }
-    <h2 class:list={["mt-1 md:text-2xl font-semibold uppercase", color.title]}>
+    <h2 class:list={["mt-2 md:text-2xl font-semibold uppercase", color.title]}>
       {post.title}
     </h2>
   </a>
-
-  <p class:list={[" md:text-lg", color.text]}>{post.description}</p>
-  <BlogPostTags tags={post.tags} />
+  <p class:list={["md:text-lg", color.text]}>{post.description}</p>
+  <Tags tags={post.tags} path="/blog/" />
 </article>
