limit tags in tag cloud to only relevent tags

--- a/frontend/src/components/TagCloud.astro
+++ b/frontend/src/components/TagCloud.astro
@@ -1,9 +1,7 @@
 ---
-import { getAllTags } from "../lib/sanity";
 import TagLink from "./TagLink.astro";
 
-const { path } = Astro.props;
-const tags = await getAllTags();
+const { path, tags } = Astro.props;
 ---
 
 <div>
