--- a/frontend/src/pages/gallery/[tag]/[...page].astro
+++ b/frontend/src/pages/gallery/[tag]/[...page].astro
@@ -6,7 +6,7 @@ import MainLayout from "../../../layouts/MainLayout.astro";
 import { getAllIllustrations, getAllTags } from "../../../lib/sanity";
 
 export async function getStaticPaths({ paginate }) {
-  const allTags = await getAllTags();
+  const allTags = await getAllTags("illustration");
   const allIllustrations = await getAllIllustrations();
   // For every tag, return a paginate() result.
   // Make sure that you pass `{params: {tag}}` to `paginate()`
