--- a/frontend/src/components/Gallery.astro
+++ b/frontend/src/components/Gallery.astro
@@ -1,13 +1,15 @@
 ---
+import { getAllTags } from "../lib/sanity";
 import GalleryImage from "./GalleryImage.astro";
 import PaginationNav from "./PaginationNav.astro";
 import TagCloud from "./TagCloud.astro";
 
 const { page, path } = Astro.props;
 const illustrations = page.data;
+const tags = await getAllTags("illustration");
 ---
 
-<TagCloud path={path} />
+<TagCloud path={path} tags={tags} />
 <ul class="columns-2 md:columns-3 lg:columns-4 gallery">
   {
     illustrations.map((i) => (
