--- a/frontend/src/components/TagCloud.astro
+++ b/frontend/src/components/TagCloud.astro
@@ -1,15 +1,18 @@
 ---
 import TagLink from "./TagLink.astro";
 
-const { path, tags } = Astro.props;
+const { path, tags, currentTag } = Astro.props;
 ---
 
 <div>
-  <button id="filter-tags" class="text-riso-red text-xl md:text-base"
-    ><span class="underline">Filter By Tag</span>
-    <span class="hidden tag-cloud-hide">↓</span>
-    <span class="tag-cloud-hide">→</span>
-  </button>
+  <div class="flex">
+    <button id="filter-tags" class="text-riso-red text-xl md:text-base"
+      ><span class="underline">Tags</span>
+      <span class="hidden tag-cloud-hide">→</span>
+      <span class="tag-cloud-hide">↓</span>
+    </button>
+    <h2 class="text-riso-red ml-auto">{currentTag}</h2>
+  </div>
   <div class="hidden tag-cloud-hide">
     <ul class="flex mt-2 gap-2 flex-wrap">
       <li class="shadow-rainbow mr-2">
