--- a/frontend/src/pages/blog/[...page].astro
+++ b/frontend/src/pages/blog/[...page].astro
@@ -22,5 +22,5 @@ const title = "Blog";
 ---
 
 <MainLayout title={title}>
-  <BlogFeed page={page} />
+  <BlogFeed page={page} tagTitle="All" />
 </MainLayout>
