--- a/frontend/src/pages/blog/[tag]/[...page].astro
+++ b/frontend/src/pages/blog/[tag]/[...page].astro
@@ -18,15 +18,15 @@ export async function getStaticPaths({ paginate }) {
     });
     return paginate(filteredPosts, {
       params: { tag: tag.slug.current },
-      pageSize: 3,
+      props: { tag: tag },
+      pageSize: 5,
     });
   });
 }
-const { page } = Astro.props;
+const { page, tag } = Astro.props;
 const params = Astro.params;
-const title = params.tag;
 ---
 
-<MainLayout title={title}>
-  <BlogFeed page={page} />
+<MainLayout title={tag.title}>
+  <BlogFeed page={page} tagTitle={tag.title} />
 </MainLayout>
