--- a/frontend/src/pages/gallery/[...page].astro
+++ b/frontend/src/pages/gallery/[...page].astro
@@ -23,5 +23,5 @@ const path = "/gallery/";
 ---
 
 <MainLayout title={title}>
-  <Gallery page={page} path={path} />
+  <Gallery page={page} path={path} tagTitle="All" />
 </MainLayout>
