--- a/frontend/src/pages/gallery/[tag]/[...page].astro
+++ b/frontend/src/pages/gallery/[tag]/[...page].astro
@@ -17,16 +17,17 @@ export async function getStaticPaths({ paginate }) {
     });
     return paginate(filteredIllustrations, {
       params: { tag: tag.slug.current },
+      props: { tag: tag },
       pageSize: 30,
     });
   });
 }
-const { page } = Astro.props;
+const { page, tag } = Astro.props;
 const params = Astro.params;
-const title = params.tag;
+
 const path = "/gallery/";
 ---
 
-<MainLayout title={title}>
-  <Gallery page={page} path={path} />
+<MainLayout title={tag.title}>
+  <Gallery page={page} path={path} tagTitle={tag.title} />
 </MainLayout>
