--- a/frontend/src/components/PaginationNav.astro
+++ b/frontend/src/components/PaginationNav.astro
@@ -8,7 +8,7 @@ const currentUrl = page.url.current;
 <div class="text-riso-blue my-6 flex">
   {
     prevUrl && (
-      <a class="hover:underline py-1 pr-3" href={prevUrl}>
+      <a class="hover:text-riso-red underline py-1 pr-3" href={prevUrl}>
         {"<< Previous"}
       </a>
     )
@@ -16,7 +16,10 @@ const currentUrl = page.url.current;
 
   {
     nextUrl && (
-      <a class="ml-auto py-1 pl-3  hover:underline" href={nextUrl}>
+      <a
+        class="ml-auto py-1 pl-3  hover:text-riso-red underline"
+        href={nextUrl}
+      >
         {"Next >>"}
       </a>
     )
