--- a/frontend/src/layouts/MainLayout.astro
+++ b/frontend/src/layouts/MainLayout.astro
@@ -4,8 +4,6 @@ import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import NavBar from "../components/NavBar.astro";
 
-import ContentLayout from "./ContentLayout.astro";
-
 export interface Props {
   title: string;
 }
@@ -15,13 +13,10 @@ const { title } = Astro.props;
 <html class="" lang="en">
   <BaseHead title={title} />
   <body
-    class="font-display container mx-auto flex flex-col min-h-screen px-4 md:px-10"
+    class="font-display container mx-auto flex flex-col items-center space-y-4 min-h-screen px-10 max-w-md md:max-w-2xl lg:max-w-4xl"
   >
     <Header />
-
-    <ContentLayout>
-      <slot />
-    </ContentLayout>
+    <slot />
     <Footer />
     <script>
       import "../lib/photoSwipe";
