--- a/frontend/src/components/TagLink.astro
+++ b/frontend/src/components/TagLink.astro
@@ -4,7 +4,11 @@ const { color, slug, title, path } = Astro.props;
 ---
 
 <a
-  class:list={["block text-white px-3 py-1", risoColorClasses[color].bg]}
+  class:list={[
+    "block text-white px-3 py-1",
+    "transition duration-100 hover:-translate-y-0.5",
+    risoColorClasses[color].bg,
+  ]}
   href={path + slug}
 >
   {title}
