--- a/frontend/src/components/Gallery.astro
+++ b/frontend/src/components/Gallery.astro
@@ -13,7 +13,7 @@ const tags = await getAllTags("illustration");
 <ul class="columns-2 md:columns-3 lg:columns-4 gallery">
   {
     illustrations.map((i) => (
-      <li class="mb-5">
+      <li class="mb-5 transition duration-100 hover:-translate-y-1">
         <GalleryImage illustration={i} />
       </li>
     ))
