set width to full

--- a/frontend/src/components/TagCloud.astro
+++ b/frontend/src/components/TagCloud.astro
@@ -4,7 +4,7 @@ import TagLink from "./TagLink.astro";
 const { path, tags, currentTag } = Astro.props;
 ---
 
-<div>
+<div class="w-full">
   <div class="flex">
     <button
       id="filter-tags"
