set width to full

--- a/frontend/src/components/PaginationNav.astro
+++ b/frontend/src/components/PaginationNav.astro
@@ -5,7 +5,7 @@ const nextUrl = page.url.next;
 const currentUrl = page.url.current;
 ---
 
-<div class="text-riso-blue my-6 flex">
+<div class="w-full text-riso-blue my-6 flex">
   {
     prevUrl && (
       <a class="hover:text-riso-red underline py-1 pr-3" href={prevUrl}>
