--- a/frontend/src/components/blog/BlogPostImage.astro
+++ b/frontend/src/components/blog/BlogPostImage.astro
@@ -15,5 +15,5 @@ const image = urlForImage(illustration.image).width(width).fit("max").url();
   data-pswp-height={width / illustration.size.aspectRatio}
   target="_blank"
 >
-  <img class="" src={image} alt="" />
+  <img src={image} alt="" />
 </a>
