--- a/frontend/src/pages/blog/posts/[slug].astro
+++ b/frontend/src/pages/blog/posts/[slug].astro
@@ -31,37 +31,33 @@ const date = post.date.slice(0, 10);
 ---
 
 <MainLayout title={post.title}>
-  <article class:list={["gallery blog-post", "riso-" + post.color]}>
+  <article
+    class:list={["max-w-3xl w-full gallery blog-post", "riso-" + post.color]}
+  >
     <p class="text-xs">{date}</p>
-    {
-      post.illustration && (
-        <div
-          class:list={[
-            "mb-5",
-            hasFeatureOrBody
-              ? "md:max-w-xs lg:float-right lg:max-w-sm lg:ml-5"
-              : null,
-          ]}
-        >
-          <BlogPostImage illustration={post.illustration} />
-        </div>
-      )
-    }
-
-    <h1>
-      {post.title}
-    </h1>
-    <p>
-      {post.description}
-    </p>
-
-    {features && <FeatureBlock features={features} />}
-
-    {
-      body && (
-        <div class="styled-body mt-5" set:html={sanityPortableText(body)} />
-      )
-    }
+    <div>
+      {
+        post.illustration && (
+          <div>
+            <BlogPostImage illustration={post.illustration} />
+          </div>
+        )
+      }
+      <div>
+        <h1>
+          {post.title}
+        </h1>
+        <p>
+          {post.description}
+        </p>
+        {features && <FeatureBlock features={features} />}
+        {
+          body && (
+            <div class="styled-body" set:html={sanityPortableText(body)} />
+          )
+        }
+      </div>
+    </div>
     <!-- <div class:list={["mt-6 border-b-2", risoColorClasses[post.color].border]}> -->
     <footer class="pt-10 clear-right">
       <Tags tags={post.tags} path="/blog/" />
