add margin fix layout spacing

--- a/frontend/src/components/TagCloud.astro
+++ b/frontend/src/components/TagCloud.astro
@@ -4,7 +4,7 @@ import TagLink from "./TagLink.astro";
 const { path, tags, currentTag } = Astro.props;
 ---
 
-<div class="w-full">
+<div class="w-full my-5">
   <div class="flex">
     <button
       id="filter-tags"
