--- a/frontend/src/layouts/MainLayout.astro
+++ b/frontend/src/layouts/MainLayout.astro
@@ -12,12 +12,14 @@ const { title } = Astro.props;
 
 <html class="" lang="en">
   <BaseHead title={title} />
-  <body
-    class="font-display container mx-auto flex flex-col items-center space-y-4 min-h-screen px-10 max-w-md md:max-w-2xl lg:max-w-5xl"
-  >
-    <Header />
-    <slot />
-    <Footer />
+  <body class="font-display container mx-auto">
+    <div
+      class="flex flex-col items-center min-h-screen px-10 max-w-md md:max-w-2xl lg:max-w-5xl"
+    >
+      <Header />
+      <slot />
+      <Footer />
+    </div>
     <script>
       import "../lib/photoSwipe";
       import "photoswipe/style.css";
