--- a/frontend/src/layouts/MainLayout.astro
+++ b/frontend/src/layouts/MainLayout.astro
@@ -12,9 +12,9 @@ const { title } = Astro.props;
 
 <html class="" lang="en">
   <BaseHead title={title} />
-  <body class="font-display container mx-auto">
+  <body class="font-display">
     <div
-      class="flex flex-col items-center min-h-screen px-10 max-w-md md:max-w-2xl lg:max-w-5xl"
+      class="container mx-auto flex flex-col items-center min-h-screen px-10 max-w-md md:max-w-2xl lg:max-w-5xl"
     >
       <Header />
       <slot />
