--- a/frontend/src/components/blog/BlogPost.astro
+++ b/frontend/src/components/blog/BlogPost.astro
@@ -6,14 +6,18 @@ import BlogPostPicture from "./BlogPostPicture.astro";
 import FeatureBlock from "./FeatureBlock.astro";
 
 const { post } = Astro.props;
+const isImageHorizontal =
+  post.illustration &&
+  post.illustration.size.width > post.illustration.size.height;
 ---
 
 <article
   class:list={["max-w-3xl w-full gallery blog-post", "riso-" + post.color]}
 >
   <p class="text-xs">{post.date.slice(0, 10)}</p>
-  <div>
+  <div class="">
     {
+      // todo: create vertical and horizontal image components or full blog layouts
       post.illustration && (
         <div>
           <BlogPostPicture illustration={post.illustration} />
